sysyruntimelibrary-master/functional_test/22_if_test1.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/22_if_test1.sy:15:18: error: syntax error, unexpected R_PARENTHESIS
15|   return (ifElse()
  |                   ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/22_if_test1.sy:0:0: error: not find main function
